<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">单身汪</string>
    <string name="action_settings">Settings</string>
    <string name="properties">SlidingMenu</string>
    <string name="login">登录</string>
    <string name="seting_msg_notification">消息通知</string>
    <string name="seting_modify_password">修改密码</string>
    <string name="seting_about_us">关于我们</string>
    <string name="seting_invite_friend">邀请好友</string>
    <string name="loginout">注销登陆</string>
    <string name="shop_vip">成为会员</string>
    <string name="shop">商城</string>
    <string name="seting">设置</string>
    <string name="home">主页</string>
    <string name="delete">删除</string>
    <string name="date_remove">放弃报名</string>
    <string name="menu">菜单</string>
    <string name="my_leave_msg">我的动态</string>
    <string name="leave_msg">给我留言</string>
    <string name="myattention">我的关注</string>
    <string name="attention">关注</string>
    <string name="back">返回</string>
    <string name="other_userinfo">TA的信息</string>
    <string name="my">我的</string>
    <string name="reg">注册</string>
    <string name="findpassword">找回密码</string>
    <string name="next">下一步</string>
    <string name="ranking">最强排行</string>
    <string name="group">群</string>
    <string name="quan">动态</string>
    <string name="near_quan">附近动态</string>
    <string name="near_people">附近</string>
    <string name="comment">发表</string>
    <string name="publish">发布</string>
    <string name="create">创建</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="confirm">确认</string>
    <string name="ok">完成</string>
    <string name="manage">管理</string>
    <string name="girl">女</string>
    <string name="boy">男</string>
    <string name="sex_chose">性别</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="confirm_title">提示</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="content_description_icon">icon</string>
    <string name="refresh">刷新</string>
    <string name="processing">加载中</string>
    <string name="download">下载</string>
    <string name="download_fail">下载安装包失败</string>
    <string name="cancel_install_msp">你已取消安装移动快捷支付服务</string>
    <string name="cancel_install_alipay">你已取消安装支付宝钱包</string>
    <string name="redo">重试</string>
    <string name="install_msp">你尚未安装支付宝移动快捷支付服务，请立即安装</string>
    <string name="install_alipay">你尚未安装支付宝钱包，请立即安装</string>

    <string name="pressedtalk">松开 结束</string>
    <string name="normaltalk">按住 说话</string>
    <string name="filter">筛选</string>
    <string name="all">全部</string>
    <string name="_1hour">一小时</string>
    <string name="_1day">一天</string>
    <string name="_3day">三天</string>
    <string name="_week">一周</string>
    <string name="jubao">举报</string>
    <string name="ziliao">资料</string>
    <string name="forget_password">忘记密码</string>
    <string name="add">添加</string>
    <string name="enter">进入</string>
    <string name="please_choise">请选择</string>
    <string name="nulls">无</string>
    <string name="month_hot">本月最热</string>
    <string name="newset_publish">最新发布</string>
    <string name="unknow">网络连接失败</string>
    <string name="favorite">收藏</string>
    <string name="location_fail">定位失败</string>
    <string name="near_peoples">附近的人</string>
    <string name="wangwang">汪汪</string>
    <string name="date">约会</string>
    <string name="xiaofei_ranking">消费排行</string>
    <string name="emoticon">表情</string>
    <string name="tt_date">偷偷约</string>
    <string name="vip_through">会员漫游</string>
    <string name="vip_intro">会员介绍</string>
    <string name="list">列表</string>
    <string name="end">结束</string>
    <string name="my_visit">访客记录</string>
    <string name="personal_dongtai">个人动态</string>
    <string name="my_publish">我发布的</string>
    <string name="reply_me">评论我的</string>
    <string name="my_home">汪窝</string>
    <string name="my_join">我参加的</string>
    <string name="publish_date">发布约会</string>
    <string name="favorite_redline">红线收藏</string>
    <string name="favorite_date">约会收藏</string>
    <string name="loading">正在请求数据</string>
    <string name="other_date">他的约会</string>
    <string name="other_date_girl">她的约会</string>
    <string name="bussiness_list">商户列表</string>
    <string name="chose_location">选择城市</string>
    <string name="trans_redline">传递红线</string>
    <string name="lazy">这个人好懒，什么都没有留下</string>
    <string name="red_line">红线</string>
    <string name="share">分享</string>
    <string name="love_send">爱情传递</string>
    <string name="cancel_bind">解绑</string>


    <string name="app_tip">提示</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="red_line_close_message">关闭后，红线将无法继续传递下去，您确定要关闭吗？</string>
    <string name="red_line_qianshou_message">牵手成功后，两人将自动成为好友。</string>
    <string name="closeing_redline">正在关闭红线</string>
    <string name="please_set_message">请输入留言</string>
    <string name="qianshou_success">牵手成功，您已和对方成为好友。</string>
    <string name="send_to_she">抛给她</string>
    <string name="send_to_he">抛给他</string>
    <string name="info_type_0">评论了你的动态</string>
    <string name="info_type_1">报名了你的约会</string>
    <string name="info_type_2">选定了与你约会</string>
    <string name="info_type_3">评论了你的约会</string>
    <string name="info_type_4">放弃了你的约会</string>
    <string name="info_type_5">你发布的约会已过期</string>
    <string name="info_type_6">将爱情红线传给了你</string>
    <string name="info_type_7">选择了与你牵手</string>
    <string name="near_dongtai">附近动态</string>
    <string name="my_care_dongtai">我关注的</string>
    <string name="date_filter">约会筛选</string>
    <string name="test_setting">测试设置</string>
    <string name="title_activity_introduce">获得狗粮</string>
    <string name="remind_message">消息通知</string>
    <string name="vip_introduce">会员介绍</string>
    <string name="how_to_play">怎么玩？</string>
</resources>