<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/custom_actionbar" />

    <ScrollView
        android:background="@color/activity_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/nearpeople"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/list_item_bg_selector_material"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ground_icon1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/near_peoples"
                    android:textColor="@color/coloc_1f1f1f"
                    android:textSize="14dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/caret" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/leavemessage"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/list_item_bg_selector_material"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ground_icon2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/red_line"
                    android:textColor="@color/coloc_1f1f1f"
                    android:textSize="14dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/caret" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/list_item_bg_selector_material"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ground_icon3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/date"
                    android:textColor="@color/coloc_1f1f1f"
                    android:textSize="14dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/caret" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ranking"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/list_item_bg_selector_material"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ground_icon4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/xiaofei_ranking"
                    android:textColor="@color/coloc_1f1f1f"
                    android:textSize="14dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/caret" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/shop"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/list_item_bg_selector_material"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ground_icon5" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/shop"
                    android:textColor="@color/coloc_1f1f1f"
                    android:textSize="14dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/caret" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/face"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/list_item_bg_selector_material"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ground_icon6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/emoticon"
                    android:textColor="@color/coloc_1f1f1f"
                    android:textSize="14dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/caret" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>