<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/crl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:background="@drawable/login_bg"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/top"
        android:fadingEdge="none"
        android:fillViewport="true">


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="27dp">

            <RelativeLayout
                android:id="@+id/userlogo_ll"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp">

                <com.quanliren.quan_two.custom.RoundImageProgressBar
                    android:layout_width="90dp"
                    android:id="@+id/round_img1"
                    android:layout_height="90dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/home_as_up_indicatosr"
                    android:visibility="gone"
                    app:border_radius="120"
                    app:border_progress="120"
                    app:border_colors="@color/nav_press_txt"
                    app:border_widths="4dp" />

                <com.quanliren.quan_two.custom.RoundImageProgressBar
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:id="@+id/round_img2"
                    android:layout_centerInParent="true"
                    android:src="@drawable/home_as_up_indicatosr"
                    app:border_radius="270"
                    app:border_progress="180"
                    android:visibility="gone"
                    app:border_colors="@color/gold"
                    app:border_widths="4dp" />

                <com.quanliren.quan_two.custom.CircleImageView
                    android:id="@+id/userlogo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/ic_launcher"
                    app:border_colors="#CCFFFFFF"
                    app:border_widths="2dp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/margin_ll"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/userlogo_ll"
                android:layout_marginTop="23dp"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/username_ll"
                    android:layout_width="fill_parent"
                    android:layout_height="51dp"
                    android:background="@drawable/login_top_new"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/username_img"/>

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:singleLine="true"
                        android:inputType="phone"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <ImageButton
                        android:id="@+id/delete_username_btn"
                        android:layout_width="30dp"
                        android:layout_height="fill_parent"
                        android:background="@null"
                        android:scaleType="centerInside"
                        android:src="@drawable/login_new_delete_icon"
                        android:visibility="gone" />

                    <ImageButton
                        android:id="@+id/more_username_btn"
                        android:layout_width="30dp"
                        android:layout_height="fill_parent"
                        android:background="@null"
                        android:scaleType="centerInside"
                        android:src="@drawable/qz_icon_navbar_drop_down" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/login_btm_new"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_marginLeft="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/pwd_img"/>

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:inputType="textPassword"
                        android:layout_marginLeft="8dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <ImageButton
                        android:id="@+id/delete_password_btn"
                        android:layout_width="30dp"
                        android:layout_height="fill_parent"
                        android:background="@null"
                        android:scaleType="centerInside"
                        android:src="@drawable/login_new_delete_icon"
                        android:visibility="gone" />
                </LinearLayout>

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="27dp"
                    android:background="@drawable/login_btn"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/nav_press_txt"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_weight="2"
                        android:layout_height="wrap_content" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="2"
                        android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/regBtn"
                        android:layout_width="fill_parent"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/reg"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <ImageView
                        android:layout_width="1dp"
                        android:layout_height="10dp"
                        android:scaleType="centerCrop"
                        android:visibility="gone"
                        android:src="@drawable/tiao" />

                    <TextView
                        android:id="@+id/forgetpassword"
                        android:layout_width="fill_parent"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/forget_password"
                        android:textColor="@color/white"
                        android:textSize="13sp" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="60dp"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/login_left"
                        android:layout_height="1dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="第三方登录"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/activity_bg"
                        android:textSize="14sp"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/login_right"
                        android:layout_height="1dp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/sina_login"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:src="@drawable/fx_sina_icon"/>

                    <ImageView
                        android:layout_width="1dp"
                        android:layout_height="10dp"
                        android:scaleType="centerCrop"
                        android:visibility="gone"
                        android:src="@drawable/tiao" />

                    <ImageView
                        android:id="@+id/qq_login"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:src="@drawable/fx_qq_icon"/>
                    <ImageView
                        android:layout_width="1dp"
                        android:layout_height="10dp"
                        android:visibility="gone"
                        android:scaleType="centerCrop"
                        android:src="@drawable/tiao" />

                    <ImageView
                        android:id="@+id/wxin_login"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/fx_weixin_icon"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/ip_setting"
        android:layout_width="wrap_content"
        android:text="IP 设置"
        android:textColor="@color/white"
        android:layout_height="wrap_content"/>
</RelativeLayout>